# avito_finish

./: manage.py  pyproject.toml
ads/: admin.py  models.py  serializer.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_like.py  0004_alter_like_options_alter_like_unique_together.py
authentication/: models.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_options.py
avito_finish/: asgi.py  settings.py  urls.py  wsgi.py
